--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
 polygon-api-client==1.0.0b11
 requests==2.27.1
+urllib3==1.26.9
+websockets==10.3
